--- a/CS3/test.html
+++ b/CS3/test.html
@@ -1,26 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html>
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
-
-    <title>My ToDo App</title>
+    <meta charset="UTF-8" />
+    <title>함수 만들기</title>
+    <script>
+     // 아래 함수를 작성
+      function gugudan(n) { // n을 매개변수로 받아 함수에서 사용
+      	let m = parseInt(n); // 문자열 n을 숫자로 바꿈
+	      	if(m < 0 && m > 9) { // 입력 값이 1~9의 값이 아닐 경우 경고창 띄우기
+      		  alert("잘못입력하셨습니다.");  // 경고창
+      		  return;
+      	  }
+          for(let i = 9; i > 0; i--) {
+            document.write(m +"*" + i + "=" + (m*i) + "<br>");
+          }
+      	// i는 9에서 1까지 반복하는 코드 작성
+      }
+    </script>
   </head>
-
   <body>
-    <div class="container shadow mx-auto mt-5 p-5 w-70">
-      <h2>My To-Do App</h2>
-      <hr>
-      <div class="input-group">
-        <input id="item" class="form-control" type="text" placeholder="Input new todo">
-        <button id="newBtn" type="button" class="btn btn-info" onclick="addItem()">New Entry</button>
-      </div>
-      <hr>
-      <ul id="todolist" class="list-group"></ul>
-    </div>
+    <h3>구구단 출력 함수 만들기</h3>
+    <hr />
+    <script>
+      let n = prompt("구구단 몇 단을 원하세요", ""); // n은 문자열
+      gugudan(n); // 함수 호출
+    </script>
   </body>
-
 </html>
